# MultiAgent-Retail-System

./: .gitignore  README.md  models.py  pyproject.toml  requirements.txt
app/: cart.py  db.py  embeddings.py  loader.py  main.py  models.py  preferences.py  product_utils.py  python-oracledb.py  schemas.py
app/agents/: cart_agent.py  generator.py  orchestrator.py  preference_extractor.py  process_user_query.py  query_builder.py  retriever.py  router.py  stripe_intregration.py
app/data/: products.csv
kapso/: client.py  data_loader.py  message_deduplicator.py  use_kapso.py  utils.py
